--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cssnano": "^4.1.10",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "postcss-easings": "^3.0.1",
     "prettier": "^2.0.5",
     "snowpack": "^3.0.1",
     "tailwindcss": "^2.0.2",
